--- a/templates/7-S.md
+++ b/templates/7-S.md
@@ -1,14 +1,23 @@
 
 Evaluating an organization on the basis of the McKinsey 7-S Framework
 * http://www.mckinsey.com/business-functions/strategy-and-corporate-finance/our-insights/enduring-ideas-the-7-s-framework
+
+
 * https://www.mindtools.com/pages/article/newSTR_91.ht://www.mindtools.com/pages/article/newSTR_91.htm
+
+
 * https://en.wikipedia.org/wiki/McKinsey_7S_Framework
+  * Hard Elements
+    * Strategy - Purpose of the business and the way the organization seeks to enhance its competitive advantage.
+    * Structure - Division of activities; integration and coordination mechanisms.
+    * Systems - Formal procedures for measurement, reward and resource allocation.
 
 
-1) Shared values
-2) strategy
-3) structure
-4) systems
-5) staff
-6) style
-7) skills
+  * Soft Elements
+    * Shared Values
+    * Skills - The organization's core competencies and distinctive capabilities.
+    * Staff - Organization's human resources, demographic, educational and attitudinal characteristics.
+    * Style - Typical behaviour patterns of key groups, such as managers, and other professionals.
+
+                              
+
